--- a/main.html
+++ b/main.html
@@ -168,50 +168,50 @@
             </div>
           </div>
           <div class="experiencia-item">
-            <div class="periodo">2023 - 2024</div>
+            <div class="periodo" data-i18n="experiencia.periodo2">2023 - 2024</div>
             <div class="detalhes">
-              <h3>Automatizador de Testes</h3>
-              <p class="empresa">WarmUP Consulting</p>
+              <h3 data-i18n="experiencia.cargo2">Automatizador de Testes</h3>
+              <p class="empresa" data-i18n="experiencia.empresa2">WarmUP Consulting</p>
               <ul>
-                <li>
+                <li data-i18n="experiencia.descricao2_1">
                   Gerenciamento do ciclo de vida dos cenários e casos de teste
                   automatizados
                 </li>
-                <li>
+                <li data-i18n="experiencia.descricao2_2">
                   Criação e gerenciamento de Pipeline de Testes Automatizados
                 </li>
-                <li>Criação e manutenção de casos de teste</li>
-                <li>
+                <li data-i18n="experiencia.descricao2_3">Criação e manutenção de casos de teste</li>
+                <li data-i18n="experiencia.descricao2_4">
                   Alinhamentos estratégicos junto ao time de Arquitetura de
                   Software
                 </li>
-                <li>Resolução de problemas com suporte global</li>
+                <li data-i18n="experiencia.descricao2_5">Resolução de problemas com suporte global</li>
               </ul>
             </div>
           </div>
           <div class="experiencia-item">
-            <div class="periodo">2021 - 2022</div>
+            <div class="periodo" data-i18n="experiencia.periodo3">2021 - 2022</div>
             <div class="detalhes">
-              <h3>Analista de Qualidade de Software Jr</h3>
-              <p class="empresa">Novigi Solution</p>
+              <h3 data-i18n="experiencia.cargo3">Analista de Qualidade de Software Jr</h3>
+              <p class="empresa" data-i18n="experiencia.empresa3">Novigi Solution</p>
               <ul>
-                <li>
+                <li data-i18n="experiencia.descricao3_1">
                   Atuação nos projetos Riachuelo Marketplace e Crefisa Tech com
                   squads ágeis e não ágeis
                 </li>
-                <li>
+                <li data-i18n="experiencia.descricao3_2">
                   Planejamento, execução e reporte de testes Web, Mobile
                   (Android/iOS) e API com foco no usuário
                 </li>
-                <li>
+                <li data-i18n="experiencia.descricao3_3">
                   Criação e manutenção de testes automatizados com Robot
                   Framework e Python
                 </li>
-                <li>
+                <li data-i18n="experiencia.descricao3_4">
                   Elaboração de cenários e casos de teste em Gherkin com foco em
                   usabilidade, acessibilidade e confiabilidade
                 </li>
-                <li>
+                <li data-i18n="experiencia.descricao3_5">
                   Participação estratégica com stakeholders, refinando critérios
                   de aceitação e mitigando riscos
                 </li>
@@ -224,7 +224,7 @@
     <!-- Seção de Habilidades -->
     <section id="habilidades" class="secao">
       <div class="container">
-        <h2 data-aos="fade-up">Habilidades Técnicas</h2>
+        <h2 data-aos="fade-up" data-i18n="habilidades.titulo">Habilidades Técnicas</h2>
         <div class="habilidades-container">
           <div class="categoria-coluna">
             <div
@@ -232,12 +232,12 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <h3>Testes</h3>
+              <h3 data-i18n="habilidades.categoria_testes">Testes</h3>
               <div class="skills-tags">
-                <span class="skill-tag">Testes Funcionais</span>
-                <span class="skill-tag">Automação de Testes</span>
-                <span class="skill-tag">Testes de Regressão</span>
-                <span class="skill-tag">Testes de Usabilidade</span>
+                <span class="skill-tag" data-i18n="habilidades.testes_1">Testes Funcionais</span>
+                <span class="skill-tag" data-i18n="habilidades.testes_2">Automação de Testes</span>
+                <span class="skill-tag" data-i18n="habilidades.testes_3">Testes de Regressão</span>
+                <span class="skill-tag" data-i18n="habilidades.testes_4">Testes de Usabilidade</span>
               </div>
             </div>
             <div
@@ -245,13 +245,13 @@
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <h3>Ferramentas</h3>
+              <h3 data-i18n="habilidades.categoria_ferramentas">Ferramentas</h3>
               <div class="skills-tags">
-                <span class="skill-tag">Selenium</span>
-                <span class="skill-tag">Azure Devops</span>
-                <span class="skill-tag">Playwright</span>
-                <span class="skill-tag">Postman</span>
-                <span class="skill-tag">Figma</span>
+                <span class="skill-tag" data-i18n="habilidades.ferramentas_1">Selenium</span>
+                <span class="skill-tag" data-i18n="habilidades.ferramentas_2">Azure Devops</span>
+                <span class="skill-tag" data-i18n="habilidades.ferramentas_3">Playwright</span>
+                <span class="skill-tag" data-i18n="habilidades.ferramentas_4">Postman</span>
+                <span class="skill-tag" data-i18n="habilidades.ferramentas_5">Figma</span>
               </div>
             </div>
           </div>
@@ -261,12 +261,12 @@
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <h3>Metodologias</h3>
+              <h3 data-i18n="habilidades.categoria_metodologias">Metodologias</h3>
               <div class="skills-tags">
-                <span class="skill-tag">Scrum</span>
-                <span class="skill-tag">Kanban</span>
-                <span class="skill-tag">BDD</span>
-                <span class="skill-tag">TDD</span>
+                <span class="skill-tag" data-i18n="habilidades.metodologias_1">Scrum</span>
+                <span class="skill-tag" data-i18n="habilidades.metodologias_2">Kanban</span>
+                <span class="skill-tag" data-i18n="habilidades.metodologias_3">BDD</span>
+                <span class="skill-tag" data-i18n="habilidades.metodologias_4">TDD</span>
               </div>
             </div>
             <div
@@ -274,12 +274,12 @@
               data-aos="fade-up"
               data-aos-delay="400"
             >
-              <h3>Soft Skills</h3>
+              <h3 data-i18n="habilidades.categoria_soft">Soft Skills</h3>
               <div class="skills-tags">
-                <span class="skill-tag">Comunicação</span>
-                <span class="skill-tag">Trabalho em Equipe</span>
-                <span class="skill-tag">Resolução de Problemas</span>
-                <span class="skill-tag">Atenção aos Detalhes</span>
+                <span class="skill-tag" data-i18n="habilidades.soft_1">Comunicação</span>
+                <span class="skill-tag" data-i18n="habilidades.soft_2">Trabalho em Equipe</span>
+                <span class="skill-tag" data-i18n="habilidades.soft_3">Resolução de Problemas</span>
+                <span class="skill-tag" data-i18n="habilidades.soft_4">Atenção aos Detalhes</span>
               </div>
             </div>
           </div>
@@ -420,6 +420,7 @@
               <li>Reconhecimento da importância de testes rigorosos</li>
               <li>Apreciação por interfaces intuitivas e responsivas</li>
             </ul>
+            <br>
             <p>
               Esta paixão me motiva a buscar constantemente a excelência em meus
               projetos de QA, aplicando lições aprendidas do mundo dos jogos
@@ -480,7 +481,7 @@
         <h2 data-aos="fade-up" data-i18n="contato.titulo">Entre em Contato</h2>
         <div class="contato-container" data-aos="fade-up" data-aos-delay="100">
           <div class="contato-info-expanded">
-            <h3>Informações de Contato</h3>
+            <h3 data-i18n="contato.info">Informações de Contato</h3>
             <div class="info-grid">
               <!-- LinkedIn -->
               <div class="info-item">
@@ -498,7 +499,6 @@
                   </p>
                 </div>
               </div>
-
               <!-- GitHub -->
               <div class="info-item">
                 <div class="info-icon">
@@ -513,26 +513,24 @@
                   </p>
                 </div>
               </div>
-
               <!-- Localização -->
               <div class="info-item">
                 <div class="info-icon">
                   <i class="fas fa-map-marker-alt"></i>
                 </div>
                 <div class="info-content">
-                  <h4>Localização</h4>
+                  <h4 data-i18n="contato.localizacao_titulo">Localização</h4>
                   <p>São Paulo, SP</p>
                 </div>
               </div>
-
               <!-- Disponibilidade -->
               <div class="info-item">
                 <div class="info-icon">
                   <i class="fas fa-clock"></i>
                 </div>
                 <div class="info-content">
-                  <h4>Disponibilidade</h4>
-                  <p>Segunda a Sexta • 9:00 - 18:00</p>
+                  <h4 data-i18n="contato.disponibilidade">Disponibilidade</h4>
+                  <p data-i18n="contato.disponibilidade_info">Segunda a Sexta • 9:00 - 18:00</p>
                 </div>
               </div>
             </div>
@@ -546,15 +544,15 @@
         <div class="footer-content">
           <div class="footer-logo">
             <h3>vladmir_prates</h3>
-            <p>QA Analyst</p>
+            <p>QA Engineer</p>
           </div>
           <div class="footer-links">
             <h4>Links Rápidos</h4>
             <ul>
-              <li><a href="#sobre">Sobre</a></li>
-              <li><a href="#experiencia">Experiência</a></li>
-              <li><a href="#projetos">Projetos</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="#sobre" data-i18n="nav.sobre">Sobre</a></li>
+              <li><a href="#experiencia" data-i18n="nav.experiencia">Experiência</a></li>
+              <li><a href="#projetos" data-i18n="nav.projetos">Projetos</a></li>
+              <li><a href="#contato" data-i18n="nav.contato">Contato</a></li>
           </div>
         </div>
         <ul></ul>
@@ -587,7 +585,7 @@
       });
     </script>
     <script>
-      // Add scroll animation for hero content
+      // Adicionar animação de entrada ao conteúdo da seção Hero
       document.addEventListener("DOMContentLoaded", function () {
         const heroContent = document.querySelector(".hero-content");
         setTimeout(() => {
