New image, quick fix

--- a/main.html
+++ b/main.html
@@ -547,7 +547,7 @@
             <p>QA Engineer</p>
           </div>
           <div class="footer-links">
-            <h4>Links Rápidos</h4>
+            <h4 data-i18n="footer.links_rapidos">Links Rápidos</h4>
             <ul>
               <li><a href="#sobre" data-i18n="nav.sobre">Sobre</a></li>
               <li><a href="#experiencia" data-i18n="nav.experiencia">Experiência</a></li>
@@ -557,7 +557,7 @@
         </div>
         <ul></ul>
         <div class="copyright">
-          <p>&copy; 2025 Vladmir Prates. Todos os direitos reservados.</p>
+          <p data-i18n="footer.copyright">&copy; 2025 Vladmir Prates. Todos os direitos reservados.</p>
         </div>
       </div>
     </footer>
