--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@
         <h2 data-aos="fade-up" data-i18n="sobre.titulo">Sobre Mim</h2>
         <div class="sobre-conteudo" data-aos="fade-up" data-aos-delay="100">
           <div class="foto-perfil">
-            <img src="assets/images/profile.jpeg" alt="Sua Foto" />
+            <img src="assets/images/profile.jpeg" class="foto-frame" alt="Foto Vladmir sentado com o notebook a frente, no fundo tem um vidro com vista para os prédios"/>
           </div>
           <div class="bio">
             <p data-i18n="sobre.paragrafo1">
@@ -218,6 +218,10 @@
               </ul>
             </div>
           </div>
+          <a href="https://www.linkedin.com/in/vladmirprates/" target="_blank" rel="noopener noreferrer" class="botao-primario">
+              <i class="fab fa-linkedin"></i>
+              <span data-i18n="experiencia.detalhes">Mais detalhes sobre as Experiências</span>
+            </a>
         </div>
       </div>
     </section>
@@ -398,8 +402,7 @@
         <h2 data-aos="fade-up">Paixão por Jogos</h2>
         <div class="jogos-content" data-aos="fade-up" data-aos-delay="100">
           <div class="jogos-imagem">
-            <img
-              src="assets/images/gaming.jpg"
+            <img class="jogos-imagem1" src="assets/images/gaming.jpg"
               alt="Foto de Vladmir Prates na Gamescom, posando ao lado de uma estátua do Sonic, destacando sua paixão por jogos."
             />
           </div>
