quick fix mobile

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio - Vladmir Prates</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="assets/css/styles.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -454,7 +455,7 @@
     <!-- Seção de recomendacoes -->
     <section id="recomendacoes" class="secao">
       <div class="container">
-        <h2 data-aos="fade-up" data-i18n="recomendacoes.titulo">O que Dizem Sobre Mim</h2>
+        <h2 data-aos="fade-up" data-i18n="recomendacoes.titulo" class="recomendacoes-titulo">O que Dizem Sobre Mim</h2>
         <div class="recomendacoes-slider" data-aos="fade-up" data-aos-delay="100">
           <div class="recomendacao">
             <div class="recomendacao-texto">
