Added links to projects

--- a/main.html
+++ b/main.html
@@ -315,7 +315,10 @@
         <h2 data-aos="fade-up" data-i18n="projetos.titulo">Projetos em Destaque</h2>
         <div class="projetos-grid" data-aos="fade-up" data-aos-delay="100">
           <!-- Projeto 1 -->
+           
           <div class="projeto-card">
+          <a href="#" style="display: block; text-decoration: none; color: inherit;">
+
             <div class="projeto-imagem">
               <img
                 src="assets/images/projeto1.jpg"
@@ -334,10 +337,12 @@
                 <span>TestNG</span>
               </div>
             </div>
+          </a>
           </div>
 
           <!-- Projeto 2 -->
           <div class="projeto-card">
+            <a href="#" style="display: block; text-decoration: none; color: inherit;">
             <div class="projeto-imagem">
               <img
                 src="assets/images/projeto2.jpg"
@@ -356,10 +361,12 @@
                 <span>Prototyping</span>
               </div>
             </div>
+            </a>
           </div>
 
           <!-- Projeto 3 -->
           <div class="projeto-card">
+            <a href="#" style="display: block; text-decoration: none; color: inherit;">
             <div class="projeto-imagem">
               <img
                 src="assets/images/projeto3.jpg"
@@ -379,6 +386,7 @@
                 <span>Product Ownership</span>
               </div>
             </div>
+            </a>
           </div>
         </div>
       </div>
