--- a/main.html
+++ b/main.html
@@ -2,22 +2,18 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Portfólio - Vladmir Prates</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="assets/css/swiper.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"/>
     <!-- Font Awesome para ícones -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <!-- AOS - Animate On Scroll -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/theme-styles.css" />
@@ -462,10 +458,10 @@
     </section>
     <!-- Seção de recomendacoes -->
     <section id="recomendacoes" class="secao">
-      <div class="container">
+      <div class="container swiper">
         <h2 data-aos="fade-up" data-i18n="recomendacoes.titulo" class="recomendacoes-titulo">O que Dizem Sobre Mim</h2>
-        <div class="recomendacoes-slider" data-aos="fade-up" data-aos-delay="100">
-          <div class="recomendacao">
+        <div class="swiper-wrapper" data-aos="fade-up" data-aos-delay="100">
+          <div class="recomendacao swiper-slide">
             <div class="recomendacao-texto">
               <p data-i18n="recomendacoes.recomendacao1_texto">
                 "Vladmir tem clareza de visão e suas opiniões são sempre muito
@@ -481,16 +477,16 @@
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3 data-i18n="recomendacoes.recomendacao1_nome">Sergio Oliveira</h3>
-                <h4 data-i18n="recomendacoes.recomendacao1_cargo">Executivo de TI, Crefisa</h4>
+                <h4 data-i18n="recomendacoes.recomendacao1_cargo">Executivo de TI</h4>
               </div>
             </div>
           </div>
-          <div class="recomendacao">
+          <div class="recomendacao swiper-slide">
             <div class="recomendacao-texto">
               <p data-i18n="recomendacoes.recomendacao2_texto">
                 "Profissional que sabe se relacionar bem com a equipe, pontuando
                 os problemas e desafios a serem vencidos. Um ótimo analista de
-                QA com muito potencial de desenvolvimento. Sabe investigar,
+                QA com muito potencial de desenvolvimento. <br>Sabe investigar,
                 documentar e testar as tarefas do dia a dia, fazendo muito bem o
                 papel de Testes Funcionais. Recomendo Vladmir Prates."
               </p>
@@ -498,11 +494,109 @@
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3 data-i18n="recomendacoes.recomendacao2_nome">Julio Cesar Nietto</h3>
-                <h4 data-i18n="recomendacoes.recomendacao2_cargo">Coordenador de QA, Riachuelo</h4>
+                <h4 data-i18n="recomendacoes.recomendacao2_cargo">Coordenador de QA</h4>
+              </div>
+            </div>
+          </div>
+            <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "Tive o prazer de trabalhar com Vladmir em um Projeto de Implantação do Salesforce, onde ele atuou na posição de QA. Desde o início, demonstrou ser um profissional extremamente proativo e comprometido com a qualidade das entregas, sempre atento aos detalhes e garantindo que os processos fossem seguidos da melhor forma possível.
+
+<br>Além de sua excelência técnica, um dos seus grandes diferenciais foi o posicionamento claro e objetivo diante das decisões tomadas no projeto, sempre com o foco em preservar o alinhamento do time e evitar impactos negativos nas entregas. Essa postura foi essencial para manter a equipe bem informada e o projeto no caminho certo."
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Leonardo Cesar</h3>
+                <h4>Consultor Salesforce</h4>
+              </div>
+            </div>
+          </div>
+            <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "O Vladmir é um profissional muito competente, dedicado e sempre aberto a novos desafios. Sempre disposto a ajudar, compartilhar conhecimento e aprender com todos. Tem um aprendizado muito rápido e se preocupa com a experiência do usuário dedicando-se sempre ao melhor nível de entrega nos projetos em que atua."
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Willian Ramos</h3>
+                <h4>Analista de Testes</h4>
+              </div>
+            </div>
+          </div>
+            <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "Trabalhei com o Vladmir em um projeto para a Riachuelo, o considero um ótimo profissional, com excelente relação interpessoal, contínua preocupação com seu desenvolvimento e sempre com uma visão muito prática e descomplicada de processos. Recomendo fortemente seu trabalho!"
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Lucas Gois</h3>
+                <h4>Analista de Testes Automatizados Sênior</h4>
+              </div>
+            </div>
+          </div>
+            <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "Tive a honra de atuar ao lado do Vladmir em um projeto de elevada complexidade, de inovação disruptiva e que irá contribuir para a mudança na matriz energética e forma de comercialização desse ativo fundamental à sociedade. Vladmir, sempre sereno e equilibrado, trouxe razão a questões acaloradas e quality by design ao produto. A quem vir esta recomendação, saiba que ter o Vladmir no time é integrar competências humanas e técnicas numa só pessoa, que recomendo de olhos fechados."
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Erika Ferrari</h3>
+                <h4>Lean-Agile Governance</h4>
+              </div>
+            </div>
+          </div>
+           <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "Um profissional muito bom, aprendeu rápido o negócio, que por si só não é tão simples. Propôs mudanças e soube lidar tanto com fatores positivos e negativos.
+Se posicionou e se adaptou junto do negócio e das mudanças dos times."
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Marcel Mendonça Grilo</h3>
+                <h4>System Manager</h4>
+              </div>
+            </div>
+          </div>
+           <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "Trabalhei com o Vladmir em iniciativas estratégicas para o Riachuelo Marketplace, e destaco as seguintes skills como pontos fortes do seu perfil profissional: 
+<br>- facilidade na absorção de conhecimento (tanto técnico, quanto sobre o negócio);
+<br>- ownership (comprometido e dedicado com a qualidade da entrega);
+<br>- trabalho em equipe;"
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Rodrigo Victor</h3>
+                <h4>Product Manager</h4>
+              </div>
+            </div>
+          </div>
+           <div class="recomendacao swiper-slide">
+            <div class="recomendacao-texto">
+              <p>
+                "Tive a grande oportunidade de trabalhar com o Vlad como colega de equipe durante alguns meses. Desde o primeiro momento o Vlad se mostrou uma pessoa extremamente colaborativa, querendo conhecer e participar ativamente dos processos do time. É uma pessoa comprometida que se preocupa com a qualidade do trabalho da equipe e com a entrega de valor ao cliente final, é criativo diante imprevistos e tem facilidade no aprendizado de novas ferramentas e processos. É um grande profissional!!!"
+              </p>
+            </div>
+            <div class="recomendacao-autor">
+              <div class="autor-info">
+                <h3>Gabriel Brandão</h3>
+                <h4>Desenvolvedor de Sistemas Sênior</h4>
               </div>
             </div>
           </div>
         </div>
+        <div class="swiper-pagination"></div>
       </div>
     </section>
     <!-- Seção de Contato -->
@@ -597,6 +691,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/hero-effects.js"></script>
     <script src="assets/js/i18n.js"></script>
+    <script src="assets/js/swiper.js"></script>
     <!-- Botão Voltar ao Topo -->
     <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
     <script>
@@ -624,8 +719,8 @@
       });
     </script>
     <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    console.log("DOM fully loaded. List items:", 
+    document.addEventListener("DOMContentLoaded", () => {
+      console.log("DOM fully loaded. List items:", 
       document.querySelectorAll('[data-i18n^="experiencia.descricao"]').length
     );
   });
