--- a/main.html
+++ b/main.html
@@ -460,8 +460,8 @@
     <section id="recomendacoes" class="secao">
       <div class="container swiper">
         <h2 data-aos="fade-up" data-i18n="recomendacoes.titulo" class="recomendacoes-titulo">O que Dizem Sobre Mim</h2>
-        <div class="swiper-wrapper" data-aos="fade-up" data-aos-delay="100">
-          <div class="recomendacao swiper-slide">
+        <div class="swiper-wrapper" data-aos="fade-up" data-aos-delay="200">
+          <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p data-i18n="recomendacoes.recomendacao1_texto">
                 "Vladmir tem clareza de visão e suas opiniões são sempre muito
@@ -481,7 +481,7 @@
               </div>
             </div>
           </div>
-          <div class="recomendacao swiper-slide">
+          <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p data-i18n="recomendacoes.recomendacao2_texto">
                 "Profissional que sabe se relacionar bem com a equipe, pontuando
@@ -498,7 +498,7 @@
               </div>
             </div>
           </div>
-            <div class="recomendacao swiper-slide">
+            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "Tive o prazer de trabalhar com Vladmir em um Projeto de Implantação do Salesforce, onde ele atuou na posição de QA. Desde o início, demonstrou ser um profissional extremamente proativo e comprometido com a qualidade das entregas, sempre atento aos detalhes e garantindo que os processos fossem seguidos da melhor forma possível.
@@ -513,7 +513,7 @@
               </div>
             </div>
           </div>
-            <div class="recomendacao swiper-slide">
+            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "O Vladmir é um profissional muito competente, dedicado e sempre aberto a novos desafios. Sempre disposto a ajudar, compartilhar conhecimento e aprender com todos. Tem um aprendizado muito rápido e se preocupa com a experiência do usuário dedicando-se sempre ao melhor nível de entrega nos projetos em que atua."
@@ -526,7 +526,7 @@
               </div>
             </div>
           </div>
-            <div class="recomendacao swiper-slide">
+            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "Trabalhei com o Vladmir em um projeto para a Riachuelo, o considero um ótimo profissional, com excelente relação interpessoal, contínua preocupação com seu desenvolvimento e sempre com uma visão muito prática e descomplicada de processos. Recomendo fortemente seu trabalho!"
@@ -539,7 +539,7 @@
               </div>
             </div>
           </div>
-            <div class="recomendacao swiper-slide">
+            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "Tive a honra de atuar ao lado do Vladmir em um projeto de elevada complexidade, de inovação disruptiva e que irá contribuir para a mudança na matriz energética e forma de comercialização desse ativo fundamental à sociedade. Vladmir, sempre sereno e equilibrado, trouxe razão a questões acaloradas e quality by design ao produto. A quem vir esta recomendação, saiba que ter o Vladmir no time é integrar competências humanas e técnicas numa só pessoa, que recomendo de olhos fechados."
@@ -552,7 +552,7 @@
               </div>
             </div>
           </div>
-           <div class="recomendacao swiper-slide">
+           <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "Um profissional muito bom, aprendeu rápido o negócio, que por si só não é tão simples. Propôs mudanças e soube lidar tanto com fatores positivos e negativos.
@@ -566,7 +566,7 @@ Se posicionou e se adaptou junto do negócio e das mudanças dos times."
               </div>
             </div>
           </div>
-           <div class="recomendacao swiper-slide">
+           <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "Trabalhei com o Vladmir em iniciativas estratégicas para o Riachuelo Marketplace, e destaco as seguintes skills como pontos fortes do seu perfil profissional: 
@@ -582,7 +582,7 @@ Se posicionou e se adaptou junto do negócio e das mudanças dos times."
               </div>
             </div>
           </div>
-           <div class="recomendacao swiper-slide">
+           <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
               <p>
                 "Tive a grande oportunidade de trabalhar com o Vlad como colega de equipe durante alguns meses. Desde o primeiro momento o Vlad se mostrou uma pessoa extremamente colaborativa, querendo conhecer e participar ativamente dos processos do time. É uma pessoa comprometida que se preocupa com a qualidade do trabalho da equipe e com a entrega de valor ao cliente final, é criativo diante imprevistos e tem facilidade no aprendizado de novas ferramentas e processos. É um grande profissional!!!"
