--- a/main.html
+++ b/main.html
@@ -500,7 +500,7 @@
           </div>
             <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao3_texto">
                 "Tive o prazer de trabalhar com Vladmir em um Projeto de Implantação do Salesforce, onde ele atuou na posição de QA. Desde o início, demonstrou ser um profissional extremamente proativo e comprometido com a qualidade das entregas, sempre atento aos detalhes e garantindo que os processos fossem seguidos da melhor forma possível.
 
 <br>Além de sua excelência técnica, um dos seus grandes diferenciais foi o posicionamento claro e objetivo diante das decisões tomadas no projeto, sempre com o foco em preservar o alinhamento do time e evitar impactos negativos nas entregas. Essa postura foi essencial para manter a equipe bem informada e o projeto no caminho certo."
@@ -509,52 +509,52 @@
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Leonardo Cesar</h3>
-                <h4>Consultor Salesforce</h4>
+                <h4 data-i18n="recomendacoes.recomendacao3_cargo">Consultor Salesforce</h4>
               </div>
             </div>
           </div>
             <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao4_texto">
                 "O Vladmir é um profissional muito competente, dedicado e sempre aberto a novos desafios. Sempre disposto a ajudar, compartilhar conhecimento e aprender com todos. Tem um aprendizado muito rápido e se preocupa com a experiência do usuário dedicando-se sempre ao melhor nível de entrega nos projetos em que atua."
               </p>
             </div>
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Willian Ramos</h3>
-                <h4>Analista de Testes</h4>
+                <h4 data-i18n="recomendacoes.recomendacao4_cargo">Analista de Testes</h4>
               </div>
             </div>
           </div>
             <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao5_texto">
                 "Trabalhei com o Vladmir em um projeto para a Riachuelo, o considero um ótimo profissional, com excelente relação interpessoal, contínua preocupação com seu desenvolvimento e sempre com uma visão muito prática e descomplicada de processos. Recomendo fortemente seu trabalho!"
               </p>
             </div>
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Lucas Gois</h3>
-                <h4>Analista de Testes Automatizados Sênior</h4>
+                <h4 data-i18n="recomendacoes.recomendacao5_cargo">Analista de Testes Automatizados Sênior</h4>
               </div>
             </div>
           </div>
             <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao6_texto">
                 "Tive a honra de atuar ao lado do Vladmir em um projeto de elevada complexidade, de inovação disruptiva e que irá contribuir para a mudança na matriz energética e forma de comercialização desse ativo fundamental à sociedade. Vladmir, sempre sereno e equilibrado, trouxe razão a questões acaloradas e quality by design ao produto. A quem vir esta recomendação, saiba que ter o Vladmir no time é integrar competências humanas e técnicas numa só pessoa, que recomendo de olhos fechados."
               </p>
             </div>
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Erika Ferrari</h3>
-                <h4>Lean-Agile Governance</h4>
+                <h4 data-i18n="recomendacoes.recomendacao6_cargo">Lean-Agile Governance</h4>
               </div>
             </div>
           </div>
            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao7_texto">
                 "Um profissional muito bom, aprendeu rápido o negócio, que por si só não é tão simples. Propôs mudanças e soube lidar tanto com fatores positivos e negativos.
 Se posicionou e se adaptou junto do negócio e das mudanças dos times."
               </p>
@@ -562,13 +562,13 @@ Se posicionou e se adaptou junto do negócio e das mudanças dos times."
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Marcel Mendonça Grilo</h3>
-                <h4>System Manager</h4>
+                <h4 data-i18n="recomendacoes.recomendacao7_cargo">System Manager</h4>
               </div>
             </div>
           </div>
            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao8_texto">
                 "Trabalhei com o Vladmir em iniciativas estratégicas para o Riachuelo Marketplace, e destaco as seguintes skills como pontos fortes do seu perfil profissional: 
 <br>- facilidade na absorção de conhecimento (tanto técnico, quanto sobre o negócio);
 <br>- ownership (comprometido e dedicado com a qualidade da entrega);
@@ -578,20 +578,20 @@ Se posicionou e se adaptou junto do negócio e das mudanças dos times."
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Rodrigo Victor</h3>
-                <h4>Product Manager</h4>
+                <h4 data-i18n="recomendacoes.recomendacao8_cargo">Product Manager</h4>
               </div>
             </div>
           </div>
            <div class="recomendacao swiper-slide" data-aos="fade-up" data-aos-delay="200">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao9_texto">
                 "Tive a grande oportunidade de trabalhar com o Vlad como colega de equipe durante alguns meses. Desde o primeiro momento o Vlad se mostrou uma pessoa extremamente colaborativa, querendo conhecer e participar ativamente dos processos do time. É uma pessoa comprometida que se preocupa com a qualidade do trabalho da equipe e com a entrega de valor ao cliente final, é criativo diante imprevistos e tem facilidade no aprendizado de novas ferramentas e processos. É um grande profissional!!!"
               </p>
             </div>
             <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Gabriel Brandão</h3>
-                <h4>Desenvolvedor de Sistemas Sênior</h4>
+                <h4 data-i18n="recomendacoes.recomendacao9_cargo">Desenvolvedor de Sistemas Sênior</h4>
               </div>
             </div>
           </div>
