Added translation to terminal

--- a/index.html
+++ b/index.html
@@ -90,23 +90,23 @@
           <div class="terminal-content" id="terminal-content">
             <div class="terminal-line">
               <span class="terminal-prompt">$</span>
-              <span class="terminal-text" id="terminal-line-1">Inicializando sistema...</span>
+              <span class="terminal-text" data-i18n="terminal.line1" id="terminal-line-1">Inicializando sistema...</span>
             </div>
             <div class="terminal-line">
               <span class="terminal-prompt">$</span>
-              <span class="terminal-text" id="terminal-line-2">Carregando módulos de QA e Gaming...</span>
+              <span class="terminal-text" data-i18n="terminal.line2" id="terminal-line-2">Carregando módulos de QA e Gaming...</span>
             </div>
             <div class="terminal-line">
               <span class="terminal-prompt">$</span>
-              <span class="terminal-text" id="terminal-line-3">Verificando experiência e habilidades...</span>
+              <span class="terminal-text" data-i18n="terminal.line3" id="terminal-line-3">Verificando experiência e habilidades...</span>
             </div>
             <div class="terminal-line">
               <span class="terminal-prompt">$</span>
-              <span class="terminal-text" id="terminal-line-4">Preparando projetos para visualização...</span>
+              <span class="terminal-text" data-i18n="terminal.line4" id="terminal-line-4">Preparando projetos para visualização...</span>
             </div>
             <div class="terminal-line">
               <span class="terminal-prompt">$</span>
-              <span class="terminal-text" id="terminal-line-5">Sistema pronto! Bem-vindo ao meu portfólio.</span>
+              <span class="terminal-text" data-i18n="terminal.line5" id="terminal-line-5">Sistema pronto! Bem-vindo ao meu portfólio.</span>
             </div>
           </div>
         </div>
